tests/jastadd/negative/name_errors/L3/7_NonProcedureCall2.ob
MODULE TestModule;
	TYPE t = INTEGER;
	PROCEDURE f;
	END f;
BEGIN
    f;
    t
END TestModule.
